syntax = "proto3";

message RoomInformationOwnerData {
    string id = 1;
    string name = 2;
}
